# zed-stringknife

./: .agentignore  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HINTS.md  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  extension.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ariscan.yml  ci.yml  gitleaks.yml  release.yml
.vault/: Home.md  README.md
.vault/.obsidian/: app.json  graph.json
.vault/architecture/: ADR-001 LSP Architecture.md  System Context.md
.vault/ari/: ARI Dashboard.md  ARI-BASELINE.md  P1 Test Isolation.md  P2 Build Determinism.md  P3 Type Safety.md  P4 Error Explicitness.md  P5 Modular Coherence.md  P6 Documentation Density.md  P7 Dependency Hygiene.md  P8 Security Gate.md
.vault/audits/: ARCH-AUDIT-1.md  ARCH-AUDIT-2.md  Audit Index.md  CODE-QUALITY-1.md  CODE-QUALITY-2.md  DEP-AUDIT-1.md  DEP-AUDIT-2.md  DEP-AUDIT-3.md  SECURITY-AUDIT-1.md
.vault/patterns/: Adding a New Transform.md  Dependency Budget.md  Gotchas.md
roadmap/: roadmap.md
src/: lib.rs
stringknife-core/: Cargo.toml
stringknife-core/benches/: transforms.rs
stringknife-core/src/: detect.rs  error.rs  lib.rs
stringknife-core/src/transforms/: base64.rs  case.rs  common.rs  csv.rs  escape.rs  hash.rs  hex.rs  html.rs  inspect.rs  json.rs  jwt.rs  misc.rs  mod.rs  unicode.rs  url.rs  whitespace.rs  xml.rs
stringknife-core/tests/: no_panic.rs
stringknife-lsp/: Cargo.toml
stringknife-lsp/src/: config.rs  main.rs
(+17 files in other folders)
